# personal-finances-backend

./: .dockerignore  .env.example  .gitignore  .importlinter  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: README.md  pom.xml
docs/: API.md  ARCHITECTURE-DIAGRAM.md  ARCHITECTURE.md  CI-CD.md  INFRA-COSTS.md  MVP-ROADMAP.md  POC.md  SECURITY-CHECKLIST.md  github-ruleset.json  migration_rename_columns.sql  migration_transactions.sql  patterns.md  rules.md  supabase_schema.sql  workflows.md
migrations/: rename_outcome_to_expense.sql
specs/: 2026-04-14-signoz-observability-design.md  frontend-api.spec.md
specs/plans/: 2026-04-14-signoz-observability.md
src/: main.py
src/agents/: categorizer.py  duplicate_checker.py  extractor.py  reporter.py
src/config/: settings.py
src/handlers/: callback.py  commands.py  message.py
src/models/: expense.py  pending.py
src/routers/: categories.py  deps.py  expenses.py  export.py  reports.py  transactions.py
src/scheduler/: reports.py
src/services/: database.py  llm.py  telegram.py  tracing.py
src/v2/: bootstrap.py
tests/: conftest.py  test_callback.py  test_categorizer.py  test_commands.py  test_database.py  test_duplicate_checker.py  test_extractor.py  test_frontend_api.py  test_llm.py  test_performance.py  test_reporter.py  test_scheduler.py  test_tracing.py  test_transactions_api.py  test_webhook.py
tests/v2/: conftest.py  test_architecture.py
todos/: README.md
todos/poc/: 01-setup.md  02-integracao-llm.md  (+2 more)
(+311 files in other folders)
