[project]
name = "finbot"
version = "0.1.0"
description = "Bot pessoal no Telegram para controle de despesas com IA"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
