[project]
name = "personal-finances-backend"
version = "0.1.0"
description = "API e bot Telegram para controle de despesas com IA"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "performance: end-to-end response time tests against a running server (requires PERF_TEST_TOKEN)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

